# Xiaobai

./: BUILD_GUIDE.md  CHANGELOG.md  CHECK_COMPLETE_REPORT.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_IMPROVEMENT_REPORT.md  CONTRIBUTING.md  README.md  SECURITY.md  WEBSITE_FIX_REPORT.md  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  research_idea.md
.next/: trace
.next/server/: server-reference-manifest.json
public/: manifest.json  robots.txt
src/: App.tsx  index.ts
src/app/: error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx
src/app/course/[id]/: page.tsx
src/app/search/: page.tsx
src/app/subjects/: page.tsx
src/app/subjects/[id]/: page.tsx
src/components/: Navbar.tsx
src/components/layout/: Layout.tsx
src/content/articles/: index.md
src/content/articles/c-language/: 01-c-introduction.md  index.md
src/content/articles/java/: index.md
src/content/articles/javascript/: index.md
src/content/articles/programming-basics/: 01-what-is-programming.md  02-variables-and-data-types.md  03-conditional-judgment.md  04-loop-structures.md  05-functions.md  06-object-oriented-programming.md  index.md
src/content/articles/python/: index.md
src/content/learning-path/: index.md  ui-libraries.md
src/content/learning-path/backend/: index.md
src/content/learning-path/database/: index.md
src/content/learning-path/foundation/: 01-programming-thinking.md  index.md
src/content/learning-path/frontend/: 01-html5-semantic.md  02-css-basics.md  03-responsive-design.md  index.md
src/content/learning-path/tools/: index.md
src/evoskill/: __init__.py
src/evoskill/modules/: __init__.py  discovery_module.py  evolution_engine.py  evolution_memory.py  mission_controller.py  skill_bank.py  skill_incubator.py  speciation_evolution.py  textgrad_engine.py  textgrad_optimizer.py  trueskill_rater.py
src/lib/: subject-utils.ts
src/pages/: CourseDetail.tsx  Home.tsx  Search.tsx  SubjectDetail.tsx  Subjects.tsx
src/scripts/: animations.js
src/styles/: global.css  globals.css
