[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "woclaw-evolution"
version = "1.0.0"
description = "🧬 AI Evolution Engine - Autonomous Self-Improving Skill System"
description-long = """
Woclaw Evolution is a revolutionary AI framework that enables Large Language Models
to autonomously discover, validate, incubate, and evolve their own skills.
Unlike traditional approaches that modify model weights, Evolution achieves
recursive self-improvement through skill creation - no retraining required.
"""
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Woclab AI Research", email = "research@woclab.ai"}
]
maintainers = [
    {name = "Evolution Engine Team"}
]
keywords = [
    "ai", "agi", "evolution", "self-improvement", "recursive",
    "skill-learning", "autonomous-agents", "llm", "trueskill",
    "textgrad", "darwinian", "speciation", "meta-learning",
    "skill-incubator", "agent-evolution",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"

# ⭐ 核心依赖（必须安装）
dependencies = [
    # CLI 框架
    "click>=8.0.0",
    "rich>=13.7.0",

    # 网络请求
    "aiohttp>=3.9.0",

    # 进化算法
    "numpy>=1.24.0",
    "scipy>=1.10.0",

    # 系统监控
    "psutil>=5.9.0",

    # 图像处理
    "Pillow>=10.0.0",
]

[project.scripts]
evolution = "woclaw.skills.evolution.scripts.run:main"

# 云端 API 支持（可选）
dependencies-api = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]

# 本地模型支持
dependencies-local = [
    # Ollama 无需额外依赖，使用 aiohttp
]

# 浏览器自动化
dependencies-browser = [
    "playwright>=1.40.0",
]

# 开发依赖
dependencies-dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# 完整依赖
dependencies-all = [
    *dependencies,
    *dependencies-api,
    *dependencies-browser,
]

[project.optional-dependencies]
api = dependencies-api
local = dependencies-local
browser = dependencies-browser
all = dependencies-all
dev = dependencies-dev

[project.urls]
Homepage = "https://github.com/badhope/Woclaw"
Repository = "https://github.com/badhope/Woclaw.git"
Documentation = "https://github.com/badhope/Woclaw/wiki"
Bug Tracker = "https://github.com/badhope/Woclaw/issues"
Discussions = "https://github.com/badhope/Woclaw/discussions"
Changelog = "https://github.com/badhope/Woclaw/releases"
Research = "https://github.com/badhope/Woclaw/wiki/Research"

[tool.setuptools]
packages = ["woclaw", "woclaw.skills", "woclaw.skills.evolution", "woclaw.skills.evolution.modules"]
package-dir = {"" = "src"}
Documentation = "https://github.com/badhope/Woclaw#readme"

[tool.setuptools.packages.find]
where = ["src"]
include = ["woclaw*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
disallow_untyped_defs = false  # 允许未类型标注

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
