[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evoskill"
version = "1.0.0"
description = "🧬 EVOSKILL - Autonomous AI Skill Evolution Framework"
description-long = """
EVOSKILL is the world's first open-source framework enabling Large Language Models
to achieve recursive self-improvement without weight updates. Built on SkillRL,
TextGrad, and TrueSkill research, EVOSKILL enables AI to autonomously discover,
validate, incubate, and evolve production-ready skills - no retraining required.

This is Darwinian evolution for AI.
"""
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "EVOSKILL AI Research", email = "research@evoskill.ai"}
]
maintainers = [
    {name = "EVOSKILL Core Team"}
]
keywords = [
    "ai", "agi", "evolution", "self-improvement", "recursive",
    "skill-learning", "autonomous-agents", "llm", "trueskill",
    "textgrad", "darwinian", "speciation", "meta-learning",
    "skill-incubator", "agent-evolution", "skillrl",
    "skill-bank", "skill-library", "auto-evolution",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "rich>=13.7.0",
    "aiohttp>=3.9.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
evoskill = "evoskill.cli:main"

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
all = ["openai>=1.0.0", "anthropic>=0.18.0"]
dev = ["pytest>=7.0.0", "black>=24.0.0", "ruff>=0.3.0"]

[project.urls]
Homepage = "https://github.com/badhope/EVOSKILL"
Repository = "https://github.com/badhope/EVOSKILL.git"
Documentation = "https://github.com/badhope/EVOSKILL/wiki"
Bug Tracker = "https://github.com/badhope/EVOSKILL/issues"
Discussions = "https://github.com/badhope/EVOSKILL/discussions"

[tool.setuptools.packages.find]
where = ["src"]
include = ["evoskill*"]
